renamed test name, made it as unit