@@ -15,6 +15,10 @@
     <description>Demo project for Spring Batch</description>
     <properties>
         <java.version>11</java.version>
+        <surefire.version>2.22.2</surefire.version>
+        <surefire-junit-dep.version>5.1.0</surefire-junit-dep.version>
+        <surefire.jvm.options>-Djdk.attach.allowAttachSelf</surefire.jvm.options>
+        <junit-surefire.version>1.1.0</junit-surefire.version>
     </properties>
     <dependencies>
         <dependency>
@@ -61,6 +65,22 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit-surefire.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${surefire-junit-dep.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
